# Copyright 2014 asarcar Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Author: Arijit Sarcar <sarcar_a@yahoo.com>
add_subdirectory(async_test)
add_subdirectory(cast_test)
add_subdirectory(file_cache_test)
add_subdirectory(future_promise_test)
add_subdirectory(levdb_test)
add_subdirectory(loop_test)
add_subdirectory(msgq_test)
add_subdirectory(mutex_test)
add_subdirectory(other_test)
add_subdirectory(packaged_task_test)
add_subdirectory(pbuf_test)
add_subdirectory(prof_test)
add_subdirectory(ref_test)
add_subdirectory(rval_test)
add_subdirectory(template_test)
add_subdirectory(thread_test)
add_subdirectory(udl_test)
